webcam_err.txt
  File "<string>", line 2
    with
        ^
SyntaxError: invalid syntax
